--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@prisma/client": "6.16.1",
     "@types/node": "^24.3.1",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "node-schedule": "^2.1.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/node-schedule": "^2.1.8",
     "prisma": "^6.16.1"
   }
 }
